      was unreadable due to permissions.
    * The ccs2tar script uses tarfile.open() in a way that is compatible
      with both python 2.4 and 2.6 (CNY-3160)
    * Brace expansion produces results similar to bash. (CNY-3158)
    * Trove searches with invalid (non-ASCII) input no longer cause a
      crash on PostgreSQL-backed repositories. (CNY-3165)

  o Internal Changes:
    * Update handling now looks for preerase trove scripts in the local
      database instead of instantiating full troves from the database and
      looking in those troves.
    * Dependency tables for removed troves are no longer dropped and rebuilt
      during each iteration of dependency solving; they are now incrementally
      built during subsequent iterations.
    * Dependency ordering code now looks in the local database for trove
      references instead of instantiating troves to get that information.
    * Code which decides what referenced troves need to be erased when
      collections are erased now:
        - Looks in the local database for trove references instead of
          instantiating troves to get that information
        - Batches reference checks, pin checks, and presence checks across
          troves instead of checking those for each trove individually
    * Fast pathed code which matches old troves with new troves for the
      case where only a single old trove and a single new trove with
      a given name exist.
    * Graph calculations for dependency ordering now only occur when the
      results are needed instead of for every pass through the dependency
      resolver.
    * Reworked rdiff to not download a full changeset from the repository.
      It now downloads only the config (text) files and diffs them on the
      client. This allows it to show diffs for changes across repositories
      and yields a nice speedup. (CNY-3039)
    * Reworked "conary remove" functionality to generate a changeset for